# meshProgrammer

./: .gitignore  CLAUDE.md  README.md  TESTING.md  main.py  pyproject.toml
meshprogrammer/: cli.py  connection.py  crypto.py  device.py  meshtastic_web.py  storage.py
meshprogrammer/web/: __init__.py  app.py
meshprogrammer/web/static/: app.js
meshprogrammer/web/templates/: index.html
meshvault/: backup.py  cli.py  connection.py  device.py  storage.py
meshvault/web/: __init__.py  app.py
meshvault/web/static/: app.css  app.js
meshvault/web/templates/: index.html
tests/: test_backup.py  test_cli.py  test_connection.py  test_crypto.py  test_meshtastic_web.py  test_storage.py  test_web.py
