[project]
name = "meshprogrammer"
version = "0.1.0"
description = "CLI for backing up and restoring Meshtastic device configs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "meshtastic>=2.7.9",
]

[project.scripts]
meshprogrammer = "meshprogrammer.cli:main"
mesh-scan = "meshprogrammer.cli:scan_entry_point"
mesh-backup = "meshprogrammer.cli:backup_entry_point"
mesh-restore = "meshprogrammer.cli:restore_entry_point"
mesh-list = "meshprogrammer.cli:list_entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
