[project]
name = "meshvault"
version = "1.1.0"
description = "MeshVault: CLI and web GUI for backing up and restoring Meshtastic device configs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=49.0.0",
    "flask>=3.0.0",
    "meshtastic>=2.7.9",
]

[project.scripts]
meshvault = "meshvault.cli:main"
meshvault-help = "meshvault.cli:help_entry_point"
meshvault-scan = "meshvault.cli:scan_entry_point"
meshvault-backup = "meshvault.cli:backup_entry_point"
meshvault-restore = "meshvault.cli:restore_entry_point"
meshvault-list = "meshvault.cli:list_entry_point"
meshvault-device-backups = "meshvault.cli:device_backups_entry_point"
meshvault-delete-backup = "meshvault.cli:delete_backup_entry_point"
meshvault-list-channels = "meshvault.cli:list_channels_entry_point"
meshvault-export-channels = "meshvault.cli:export_channels_entry_point"
meshvault-import-channels = "meshvault.cli:import_channels_entry_point"
meshvault-delete-channels = "meshvault.cli:delete_channels_entry_point"
meshvault-flash-firmware = "meshvault.cli:flash_firmware_entry_point"
meshvault-gui = "meshvault.cli:gui_entry_point"
meshvault-meshtastic-web = "meshvault.cli:meshtastic_web_entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
